// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render with neither 1`] = `null`;

exports[`renders error variant 1`] = `
<div
  class="bg-theme-bg border border-l-8 border-theme-bg-alt p-4 shadow-xl w-full border-l-theme-error"
>
  <h2
    class="text-sm font-bold mb-2"
  >
    Teysa
  </h2>
</div>
`;

exports[`renders success variant 1`] = `
<div
  class="bg-theme-bg border border-l-8 border-theme-bg-alt p-4 shadow-xl w-full border-l-theme-success"
>
  <h2
    class="text-sm font-bold mb-2"
  >
    Teysa
  </h2>
</div>
`;

exports[`renders with a title 1`] = `
<div
  class="bg-theme-bg border border-l-8 border-theme-bg-alt p-4 shadow-xl w-full"
>
  <h2
    class="text-sm font-bold mb-2"
  >
    Teysa
  </h2>
</div>
`;

exports[`renders with both 1`] = `
<div
  class="bg-theme-bg border border-l-8 border-theme-bg-alt p-4 shadow-xl w-full"
>
  <h2
    class="text-sm font-bold mb-2"
  >
    Teysa
  </h2>
  <p
    class="text-xs"
  >
    Double on death triggers
  </p>
</div>
`;

exports[`renders with text 1`] = `
<div
  class="bg-theme-bg border border-l-8 border-theme-bg-alt p-4 shadow-xl w-full"
>
  <p
    class="text-xs"
  >
    Double on death triggers
  </p>
</div>
`;
